--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
     "country-state-city": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-lottie": "^1.2.3",
-    "react-router-dom": "^6.20.1"
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.20.1",
+    "react-toastify": "^9.1.3",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
